--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -18,6 +18,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+concurrency:
+  group: pre-test-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   download_data:
     name: Download test data
@@ -74,12 +78,26 @@ jobs:
           pip install --upgrade pip
           pip install setuptools tox tox-gh-actions>=2.12.0
 
+      - name: Test with tox base
+        # run tests using pip install --pre
+        uses: aganders3/headless-gui@v2
+        timeout-minutes: 60
+        with:
+          run: python -m tox run -v -- -v package/tests/test_PartSegImage package/tests/test_PartSegCore
+        env:
+          PLATFORM: ${{ matrix.platform }}
+          PYVISTA_OFF_SCREEN: True  # required for opengl on windows
+          NAPARI: latest
+          BACKEND: PyQt6
+          PIP_CONSTRAINT: requirements/pre_test_problematic_version.txt
+          PIP_PRE: 1
+
       - name: Test with tox linux
         # run tests using pip install --pre
         uses: aganders3/headless-gui@v2
         timeout-minutes: 60
         with:
-          run: python -m tox run -v -- -v
+          run: python -m tox run -v -- -v package/tests/test_PartSeg
         env:
           PLATFORM: ${{ matrix.platform }}
           PYVISTA_OFF_SCREEN: True  # required for opengl on windows
@@ -108,26 +126,29 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
-      name: Install Python 3.12
+      name: Install Python
       with:
-        python-version: 3.12
+        python-version: 3.x
     - uses: tlambert03/setup-qt-libs@v1
+    - name: Install uv
+      run: pip install uv
+    - name: Compile PyInstaller requirements
+      run: |
+        uv pip compile --prerelease allow --python-version 3.12 --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        pip install pip-tools
-    - name: Compile and install PyInstaller requirements
-      run: |
-        pip-compile --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller  --pre
-        pip-sync
-        pip install .
+        uv venv --python 3.12
+        uv pip install -r requirements.txt
+        uv pip install .
     - name: upload requirements
       uses: actions/upload-artifact@v4
       with:
         name: requirements
         path: requirements.txt
     - name: Run PyInstaller
-      run: python  build_utils/create_and_pack_executable.py
+      run: |
+        source .venv/bin/activate
+        python build_utils/create_and_pack_executable.py
     - name: Upload bundle
       uses: actions/upload-artifact@v4
       with:
